# Health_and_fitness_tracking_system

./: .env  Dockerfile  pyproject.toml
migrations/versions/: 15f4f02a8378_.py  48ff724146a0_.py  b40a97546da5_.py
src/: README.md  app.py
src/config/: settings.py
src/contracts/: user_dto.py  workout_dto.py
src/controllers/: user_action_controller.py
src/middleware/: auth.py  error_handler.py  request_context.py
src/models/: __init__.py  achievement.py  exercise.py  goal.py  measurement.py  nutrition.py  user.py  user_achievement.py  user_profile.py  user_workout.py  workout.py  workout_exercise.py
src/repositories/: user_repository.py
src/schemas/: __init__.py  user.py
src/services/: user_service.py
src/utils/: exceptions.py  logger.py  response_builder.py
